--- a/EmotionMain/pom.xml
+++ b/EmotionMain/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>xtt</artifactId>
             <version>3.2.6</version>
         </dependency>
+        <dependency>
+            <groupId>xom</groupId>
+            <artifactId>xom</artifactId>
+            <version>1.2.5</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
 </project>
