--- a/EmotionStrategySelector/pom.xml
+++ b/EmotionStrategySelector/pom.xml
@@ -55,5 +55,16 @@
             <version>1.2.5</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>de.unibi.agai</groupId>
+            <artifactId>EmotionLib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>de.unibi.agai.</groupId>
+            <artifactId>EmotionLib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
